--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#######################################
+# Python stuff from github
+#######################################
 *.py[co]
 
 # Packages
