--- a/magnumfe/CMakeLists.txt
+++ b/magnumfe/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SRC
   assemble_scalar_product.cpp
   Mesher.cpp
   SubMeshInterpolator.cpp
+  DofAssembler.cpp
 )
 
 append_magnumfe_src(${CMAKE_CURRENT_SOURCE_DIR} "${SRC}")
