--- a/magnumfe/CMakeLists.txt
+++ b/magnumfe/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRC
   SubMeshInterpolator.cpp
   DofForm.cpp
   DofAssembler.cpp
+  CGDofForm.cpp
 )
 
 append_magnumfe_src(${CMAKE_CURRENT_SOURCE_DIR} "${SRC}")
