fix install rule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,4 +132,4 @@ message ("-- Found Python ${PYTHON_VERSION}, will install at ${PYTHON_SITE_MODUL
 
 # install directory magnum, exclude the symlinks
 install(DIRECTORY site-packages/magnumfe DESTINATION "${PYTHON_SITE_MODULES}" PATTERN "site-packages/magnumfe/cpp.py site-packages/magnumfe/_cpp.so" EXCLUDE)
-install(FILES ${CMAKE_BINARY_DIR}/cpp.py ${CMAKE_BINARY_DIR}/_cpp.so DESTINATION "${PYTHON_SITE_MODULES}/site-packages/magnumfe")
+install(FILES ${CMAKE_BINARY_DIR}/cpp.py ${CMAKE_BINARY_DIR}/_cpp.so DESTINATION "${PYTHON_SITE_MODULES}/magnumfe")
