--- a/docker/bempp_setup.cfg
+++ b/docker/bempp_setup.cfg
@@ -131,12 +131,12 @@ lib=/usr/lib/liblapack.so
 # and install it along with BEM++. This library enables BEM++ to use
 # the adaptive cross approximation algorithm to speed up calculations.
 
-enable_ahmed=yes
+# enable_ahmed=yes
 
-# If you have set enable_ahmed to yes, specify the path to the archive
+# If you have set # enable_ahmed to yes, specify the path to the archive
 # file with the sources of AHMED. Example:
 
-file_name=/tmp/AHMED-1.0.tar.gz
+# file_name=/tmp/AHMED-1.0.tar.gz
 
 # Use this section to override compiler settings for AHMED
 
