--- a/virtual/files/bempp_setup.cfg
+++ b/virtual/files/bempp_setup.cfg
@@ -29,7 +29,7 @@ architecture=intel64
 # Specify the prefix of the installation directory.  BEM++ and its
 # dependencies will be installed in prefix/bempp. Example:
 
-prefix=~
+prefix=/usr/local
 
 # It is highly recommended to adapt the number of threads used to 
 # build the library to the number of underlying CPU cores. A good rule 
@@ -131,12 +131,12 @@ lib=/usr/lib/liblapack.so
 # and install it along with BEM++. This library enables BEM++ to use
 # the adaptive cross approximation algorithm to speed up calculations.
 
-# enable_ahmed=yes
+enable_ahmed=yes
 
-# If you have set # enable_ahmed to yes, specify the path to the archive
+# If you have set enable_ahmed to yes, specify the path to the archive
 # file with the sources of AHMED. Example:
 
-# file_name=/tmp/AHMED-1.0.tar.gz
+file_name=/tmp/AHMED-1.0.tar.gz
 
 # Use this section to override compiler settings for AHMED
 
